# PricePulse

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pricepulse.db-shm  pricepulse.db-wal
config/: config.toml.example
migrations/: 20260717000000_init.sql  20260721000000_add_users.sql
src/: cli.rs  config.rs  database.rs  errors.rs  main.rs  models.rs  notifications.rs  scheduler.rs
src/api/: auth.rs  dto.rs  google_oauth.rs  mod.rs  router.rs
src/api/handlers/: auth_handlers.rs  mod.rs  product_handlers.rs
src/parser/: mod.rs  product_parser.rs
src/scraper/: amazon.rs  flipkart.rs  mod.rs  myntra.rs  nykaa.rs  savana.rs  steam.rs  trait.rs
src/storage/: repository.rs
