[package]
name = "pricepulse"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.38", features = ["full"] }

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# HTML Parsing
scraper = "0.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database & ORM
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite", "chrono", "macros" ] }

# CLI Parsing
clap = { version = "4.5", features = ["derive"] }

# Logging & Diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"

# Date Time
chrono = { version = "0.4", features = ["serde"] }

# Regular Expressions
regex = "1.10"

# Terminal Aesthetics & Interactivity
colored = "2.1"
indicatif = { version = "0.17", features = ["tokio"] }
